--- a/strong/configs/model/default.yaml
+++ b/strong/configs/model/default.yaml
@@ -5,8 +5,7 @@ WavLM: False
 
 feature_extractors:
   -
-    _target_: model.load_ssl_model
-    cp_path: ../fairseq_checkpoints/wav2vec_small.pt
+    _target_: model.SSL_model
 
   -
     _target_: model.PhonemeEncoder
@@ -14,17 +13,10 @@ feature_extractors:
     emb_dim: 256
     out_dim: 256
     n_lstm_layers: 3
-    vocab_size: 198
-  -
-    _target_: model.DomainEmbedding
-    n_domains: 3
-    domain_dim: 128
 
 output_layers:
   -
     _target_: model.LDConditioner
-    judge_dim: 128
-    num_judges: 3000
   -
    _target_: model.Projection
    hidden_dim: 2048
