--- a/strong/configs/model/default.yaml
+++ b/strong/configs/model/default.yaml
@@ -19,6 +19,8 @@ feature_extractors:
 output_layers:
   -
     _target_: model.LDConditioner
+    judge_dim: 128
+    num_judges: 3000
   -
    _target_: model.Projection
    hidden_dim: 2048
