--- a/strong/configs/dataset/default.yaml
+++ b/strong/configs/dataset/default.yaml
@@ -3,9 +3,9 @@ data_dir: data/phase1-main/DATA
 data_sources: 
   -
     name: "main"
-    train_mos_list_path: data/sets/train_unique.txt
-    val_mos_list_path: data/sets/val_unique.txt
-    test_mos_list_path: data/sets/ev_unique.txt
+    train_mos_list_path: data/sets/train.txt
+    val_mos_list_path: data/sets/val.txt
+    test_mos_list_path: data/sets/ev.txt
     wav_dir: data/wav
     data_dir: data/
     outfile: answer-main.csv
