--- a/strong_byframe/configs/model/default.yaml
+++ b/strong_byframe/configs/model/default.yaml
@@ -5,10 +5,9 @@ WavLM: False
 
 feature_extractors:
   -
-    _target_: model.SSL_model
-    out_dim: 3072
-    path: "/work/ge43/e43020/master_project/UTMOS_BYOL-A/envMOS/strong/data/byola"
-
+    _target_: model.load_ssl_model
+    cfg_path: '/work/ge43/e43020/master_project/UTMOS_BYOL-A/envMOS/strong_byframe/config_v2.yaml'
+    cp_path: '/work/ge43/e43020/master_project/UTMOS_BYOL-A/envMOS/strong_byframe/AudioNTT2022-BYOLA-64x96d2048.pth'
   -
     _target_: model.PhonemeEncoder
     llm_dim: 1024
