--- a/strong_byframe/configs/dataset/default.yaml
+++ b/strong_byframe/configs/dataset/default.yaml
@@ -3,7 +3,7 @@ data_dir: data/phase1-main/DATA
 data_sources: 
   -
     name: "main"
-    train_mos_list_path: data/sets/train.txt
+    train_mos_list_path: data/sets/train_dummy.txt
     val_mos_list_path: data/sets/val.txt
     test_mos_list_path: data/sets/ev.txt
     wav_dir: data/wav
