--- a/strong_byframe/configs/dataset/default.yaml
+++ b/strong_byframe/configs/dataset/default.yaml
@@ -3,7 +3,7 @@ data_dir: data/phase1-main/DATA
 data_sources: 
   -
     name: "main"
-    train_mos_list_path: data/sets/train_dummy.txt
+    train_mos_list_path: data/sets/train.txt
     val_mos_list_path: data/sets/val.txt
     test_mos_list_path: data/sets/ev.txt
     wav_dir: data/wav
@@ -14,7 +14,7 @@ use_data:
 datamodule: 
   _target_: dataset.DataModule
 #### only_meanは、平均値しか入手できないシナリオのこと。
-only_mean: False
+only_mean: True
 additional_datas:
   -
     _target_: dataset.NormalizeScore
