change learning rate

--- a/strong_byframe/configs/dataset/default.yaml
+++ b/strong_byframe/configs/dataset/default.yaml
@@ -5,7 +5,7 @@ data_sources:
     name: "main"
     train_mos_list_path: data/sets/train.txt
     val_mos_list_path: data/sets/val.txt
-    test_mos_list_path: data/sets/ev.txt
+    test_mos_list_path: data/sets/train.txt
     wav_dir: data/wav
     data_dir: data/
     outfile: answer-main.csv
