add class balanced loss

--- a/strong_byframe/configs/train/default.yaml
+++ b/strong_byframe/configs/train/default.yaml
@@ -41,6 +41,8 @@ criterion:
         reduction: 'none'
       tau: 0.25
       mode: 'frame'
+      beta: 0.99
     -
       _target_: loss_function.ContrastiveLoss
       margin: 0.1
+      beta: 0.99
