--- a/strong_byframe/configs/dataset/default.yaml
+++ b/strong_byframe/configs/dataset/default.yaml
@@ -3,8 +3,8 @@ data_dir: data/phase1-main/DATA
 data_sources: 
   -
     name: "main"
-    train_mos_list_path: data/sets/train.txt
-    val_mos_list_path: data/sets/val.txt
+    train_mos_list_path: data/sets/train_val.txt
+    val_mos_list_path: data/sets/ev.txt
     test_mos_list_path: data/sets/ev.txt
     wav_dir: data/wav
     data_dir: data/
